2008-08-25 Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/: Support debug dumping of SEL Event Records.
	Handle sensor finding corner case on Supermicro.

	* ipmi-sensors/src/: Include sensor owner id type in slave address
	output.

2008-08-25 Albert Chu <chu11@llnl.gov>

	* tagged ipmi_chassis_boot_flags_valid_remove_pre

	* ipmi-chassis-config/: Do not allow configuration of
	boot_flags_valid and its bit clearing.  Always set
	boot_flags_valid to 1 (i.e. "Yes").

	* ipmi-chassis-config/src/ipmi-chassis-config-boot-flags-valid-bit-clearing.h,
	ipmi-chassis-config/src/ipmi-chassis-config-boot-flags-valid-bit-clearing.c:
	Removed files.

	* tagged ipmi_chassis_boot_flags_valid_remove_post

2008-08-25 Albert Chu <chu11@llnl.gov>
	
	* ipmi-chassis-config/: Remove ipmi chassis boot flags workaround.

2008-08-25 Albert Chu <chu11@llnl.gov>

	* merge in ipmb_branch

	* libfreeipmi/include/freeipmi/cmds/ipmi-event-commands.h,
	libfreeipmi/src/cmds/ipmi-event-cmds.c,
	libfreeipmi/src/api/ipmi-event-cmds.c,
	libfreeipmi/include/freeipmi/api/ipmi-event-cmds-api.h: New files.

	* libfreeipmi/include/freeipmi/util/ipmi-ipmb-util.h,
	libfreeipmi/src/util/ipmi-ipmb-util.c: New files.

	* libfreeipmi/include/freeipmi/freeipmi.h: Update for new files.

	* libfreeipmi/src/api/ipmi-api.c,
	libfreeipmi/include/freeipmi/api/ipmi-api.h (ipmi_cmd_ipmb): New
	function.

	* libfreeipmi/include/freeipmi/util/ipmi-error-util.c,
	libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Support
	error codes for get message command.

	* libfreeipmi/src/api/ipmi-kcs-interface-api.h,
	libfreeipmi/src/api/ipmi-kcs-interface-api.c
	(ipmi_kcs_cmd_api_ipmb): New function.

	* libfreeipmi/include/freeipmi/driver/ipmi-openipmi-driver.h,
	libfreeipmi/src/driver/ipmi-openipmi-driver.c
	(ipmi_openipmi_cmd_ipmb): New function.

	* libfreeipmi/src/api/ipmi-openipmi-interface-api.h,
	libfreeipmi/src/api/ipmi-openipmi-interface-api.c
	(ipmi_openipmi_cmd_api_ipmb): New function.
	