@@ -1,4 +1,4 @@
-#####################################################################################################
+##########################################################################################################
 #
 # IPMIMonitoring_Sensors
 #
@@ -25,7 +25,7 @@
 #
 # P.S.  If you configure different values, remember to uncomment the line :-)
 # 
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Threshold_Sensor
 #
@@ -38,55 +38,68 @@
 # IPMI_Threshold_Sensor_At_Or_Above_Upper_Critical_Threshold          Critical
 # IPMI_Threshold_Sensor_At_Or_Above_Upper_Non_Recoverable_Threshold   Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Voltage_Performance
 #
 # IPMI_Voltage_Performance_Met  Nominal
 # IPMI_Voltage_Performance_Lags Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Fan_Device_Install
 #
 # IPMI_Fan_Device_Install_Device_Removed_Device_Absent   Critical
 # IPMI_Fan_Device_Install_Device_Inserted_Device_Present Nominal
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Module_Board_State
 #
 # IPMI_Module_Board_State_Deasserted   Nominal
 # IPMI_Module_Board_State_Asserted     Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Module_Board_Device_Install
 #
 # IPMI_Module_Board_Device_Install_Device_Removed_Device_Absent   Critical
 # IPMI_Module_Board_Device_Install_Device_Inserted_Device_Present Nominal
 #
-#####################################################################################################
+##########################################################################################################
+#
+# IPMI_Power_Supply_Redundancy
+#
+# IPMI_Power_Supply_Redundancy_Fully_Redundant                                                 Nominal
+# IPMI_Power_Supply_Redundancy_Redundancy_Lost                                                 Critical
+# IPMI_Power_Supply_Redundancy_Redundancy_Degraded                                             Warning
+# IPMI_Power_Supply_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant               Critical
+# IPMI_Power_Supply_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy Critical
+# IPMI_Power_Supply_Redundancy_Non_Redundant_Insufficient_Resources                            Critical
+# IPMI_Power_Supply_Redundancy_Redundancy_Degraded_From_Fully_Redundant                        Warning
+# IPMI_Power_Supply_Redundancy_Redundancy_Degraded_From_Non_Redundant                          Warning
+#
+##########################################################################################################
 #
 # IPMI_Power_Unit_Redundancy
 #
-# IPMI_Power_Unit_Redundancy_Fully_Redundant                                                 Nominal
-# IPMI_Power_Unit_Redundancy_Redundancy_Lost                                                 Critical
-# IPMI_Power_Unit_Redundancy_Redundancy_Degraded                                             Warning
-# IPMI_Power_Unit_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant               Critical
-# IPMI_Power_Unit_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy Critical
-# IPMI_Power_Unit_Redundancy_Non_Redundant_Insufficient_Resources                            Critical
-# IPMI_Power_Unit_Redundancy_Redundancy_Degraded_From_Fully_Redundant                        Warning
-# IPMI_Power_Unit_Redundancy_Redundancy_Degraded_From_Non_Redundant                          Warning
+# IPMI_Power_Unit_Redundancy_Fully_Redundant                                                   Nominal
+# IPMI_Power_Unit_Redundancy_Redundancy_Lost                                                   Critical
+# IPMI_Power_Unit_Redundancy_Redundancy_Degraded                                               Warning
+# IPMI_Power_Unit_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant                 Critical
+# IPMI_Power_Unit_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy   Critical
+# IPMI_Power_Unit_Redundancy_Non_Redundant_Insufficient_Resources                              Critical
+# IPMI_Power_Unit_Redundancy_Redundancy_Degraded_From_Fully_Redundant                          Warning
+# IPMI_Power_Unit_Redundancy_Redundancy_Degraded_From_Non_Redundant                            Warning
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Drive_Slot_Device
 #
 # IPMI_Device_Slot_Device_Removed  Critical
 # IPMI_Device_Slot_Device_Inserted Nominal
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Physical_Security 
 #
@@ -98,7 +111,7 @@
 # IPMI_Physical_Security_Unauthorized_Dock_Undock  Critical 
 # IPMI_Physical_Security_FAN_Area_Intrusion        Critical 
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Platform_Security_Violation_Attempt 
 #
@@ -109,7 +122,7 @@
 # IPMI_Platform_Security_Violation_Attempt_Other_Pre_Boot_Password_Violation                 Critical 
 # IPMI_Platform_Security_Violation_Attempt_Out_Of_Band_Access_Password_Violation             Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Processor
 #
@@ -125,7 +138,7 @@
 # IPMI_Processor_Terminator_Presence_Detected                  Critical
 # IPMI_Processor_Processor_Automatically_Throttled             Warning
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Power_Supply
 #
@@ -137,7 +150,7 @@
 # IPMI_Power_Supply_Power_Supply_Input_Out_Of_Range_But_Present Critical
 # IPMI_Power_Supply_Configuration_Error                         Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Power_Unit
 #
@@ -150,7 +163,7 @@
 # IPMI_Power_Unit_Power_Unit_Failure_Detected Critical
 # IPMI_Power_Unit_Predictive_Failure          Critical
 # 
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Memory
 #
@@ -165,7 +178,7 @@
 # IPMI_Memory_Spare                                              Nominal
 # IPMI_Memory_Memory_Automatically_Throttled                     Warning
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Drive_Slot
 #
@@ -179,7 +192,7 @@
 # IPMI_Drive_Slot_Rebuild_Remap_In_Progress                  Nominal
 # IPMI_Drive_Slot_Rebuild_Remap_Aborted                      Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_System_Firmware_Progress
 #
@@ -187,7 +200,7 @@
 # IPMI_System_Firmware_Progress_System_Firmware_Hang     Critical
 # IPMI_System_Firmware_Progress_System_Firmware_Progress Nominal
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Event_Logging_Disabled
 #
@@ -198,7 +211,7 @@
 # IPMI_Event_Logging_Disabled_SEL_Full                            Critical
 # IPMI_Event_Logging_Disabled_SEL_Almost_Full                     Warning
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_System_Event
 #
@@ -209,7 +222,7 @@
 # IPMI_System_Event_PEF_Action                           Nominal
 # IPMI_System_Event_Timestamp_Clock_Sync                 Warning
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Critical_Interrupt
 #
@@ -225,7 +238,7 @@
 # IPMI_Critical_Interrupt_Fatal_NMI                            Critical
 # IPMI_Critical_Interrupt_Bus_Fatal_Error                      Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Slot_Connector
 #
@@ -240,7 +253,7 @@
 # IPMI_Slot_Connector_Slot_Is_Disabled                             Warning
 # IPMI_Slot_Connector_Slot_Holds_Spare_Device                      Nominal
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Watchdog2
 #
@@ -254,7 +267,7 @@
 # IPMI_Watchdog2_Reserved4       Nominal
 # IPMI_Watchdog2_Timer_Interrupt Warning
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Entity_Presence
 #
@@ -262,7 +275,7 @@
 # IPMI_Entity_Presence_Entity_Absent   Critical
 # IPMI_Entity_Presence_Entity_Disabled Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Management_Subsystem_Health
 #
@@ -273,7 +286,7 @@
 # IPMI_Management_Subsystem_Health_Sensor_Failure                             Critical
 # IPMI_Management_Subsystem_Health_FRU_Failure                                Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Battery
 #
@@ -281,7 +294,7 @@
 # IPMI_Battery_Battery_Failed            Critical
 # IPMI_Battery_Battery_Presence_Detected Nominal
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_FRU_State
 #
@@ -294,14 +307,14 @@
 # IPMI_FRU_State_FRU_Deactivation_In_Progress Warning 
 # IPMI_FRU_State_FRU_Communication_Lost       Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Cable_Interconnect
 #
 # IPMI_Cable_Interconnect_Is_Connected                                        Nominal
 # IPMI_Cable_Interconnect_Incorrect_Cable_Connected_Incorrect_Interconnection Critical
 #
-#####################################################################################################
+##########################################################################################################
 #
 # IPMI_Boot_Error
 #
@@ -311,4 +324,4 @@
 # IPMI_Boot_Error_Invalid_Boot_Sector                                Critical
 # IPMI_Boot_Error_Timeout_Waiting_For_User_Selection_Of_Boot_Source  Warning
 #
-#####################################################################################################
+##########################################################################################################
