@@ -1,3 +1,7 @@
+2008-08-26 Albert Chu <chu11@llnl.gov>
+
+	* ipmimonitoring/: Support power supply redundancy interpretation.
+	
 2008-08-25 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-sel/src/: Support debug dumping of SEL Event Records.
